# iot_seminaari_standi_2017

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  iotservice  iotservice.cpp  iovirta_iot  latest_debug_build.apk  server  server.cpp  tcpnetworking.cpp  tcpnetworking.h
Boost_Asio_tutorialit/: daytime1  daytime1.cpp  daytime1_  daytime1_custom.cpp  daytime2  daytime3.cpp  daytime3_  daytime3_custom.cpp  timer3.cpp  timer4
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: videolistentry_borders.xml
app/src/main/res/drawable-hdpi/: buttonshape.xml
app/src/main/res/layout/: activity_credits_.xml  activity_jsontest.xml  activity_main.xml  activity_media_view.xml  activity_media_view_from_url.xml  activity_vide_show.xml  content_main.xml  (+1 more)
app/src/main/res/layout-land/: activity_credits.xml  activity_credits_.xml  activity_main.xml  activity_main_old.xml
inc/: inotify++.hpp  tree.hpp
inc/conf/: conf.hpp
inc/conf/parser/: conf_file_parser.hpp  default.hpp  ini.hpp
inc/network/: fcm_server.hpp  tcp_server.hpp  video_streamer.hpp
inc/video/: camera.hpp  encoded_frame.hpp  encoder.hpp  motion.hpp
old/: cameramodule.h  client  client.cpp  iotservice.cpp  tcpnetworking.cpp  tcpnetworking.h
old/Boost_Asio_tutorialit/: _kaantokomento  daytime1.cpp  daytime2.cpp  daytime3  timer1  timer1.cpp  timer2  timer2.cpp  timer3  timer4.cpp
src/: main.cpp
src/conf/: conf.cpp
src/network/: fcm_server.cpp  video_streamer.cpp
src/video/: camera.cpp  encoder.cpp  motion.cpp
(+19 files in other folders)
